--- a/index.html
+++ b/index.html
@@ -311,18 +311,66 @@
   <script>
   /* ---------------- PERSONALIZED MESSAGES ---------------- */
   const messages = {
-    teacher: {
+    Uyanga_teacher: {
       title: "Dear Teacher ❤️",
-      text: "Thank you for your patience, guidance, and belief in me. I will always carry your lessons with me."
+      text: "First of all. thank you for being my teacher. I'm truly grateful for the countless continuous support, patience, and genuine care. Your guidance has helped me grow not only academically, but also as a person. Thank you sensei, I will always cherish your kindness and dedication."
     },
-    friend: {
-      title: "Dear My Friend 🎄",
-      text: "Thank you for standing by me, encouraging me, and making life brighter."
+    Khuslen_friend: {
+      title: "Dear My Friendo ✨",
+      text: "My dear friend who always understands, supports, and encourages me. When things get heavy, you’re the one who reminds me that we can conquer anything together. Having you by my side gives me so much strength. I’ll always be grateful for you. Love ya 💖"
     },
-    mentor: {
-      title: "Dear Mentor ✨",
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "My precious and genuine friend, thank you for always staying by my side when I feel down. Your kind heart and quiet support mean the world to me. I’m so thankful for all the beautiful memories we’ve made together. Love ya 💕"
+    },
+    Lhamaa_friend: {
+      title: "Dear My Friendo ✨",
+      text: "My cute little friend, I’m so grateful for all the fun, laughter, gossip, and even the crazy chaos we’ve shared. Thank you for always having my back and supporting me through the hard times. I truly appreciate you. Love ya ❤️"
+    },
+    Chinbai_friend: {
+      title: "Dear My Friendo ✨",
       text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
-    }
+    },
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    },
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    },
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    },
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    },
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    },
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    },
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    },
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    },
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    },
+    Naran_friend: {
+      title: "Dear My Friendo ✨",
+      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    },
   };
 
   const params = new URLSearchParams(window.location.search);
@@ -432,3 +480,4 @@
 </script>
 </body>
 </html>
+
