--- a/index.html
+++ b/index.html
@@ -329,48 +329,60 @@
     },
     Chinbai_friend: {
       title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+      text: "My cute and funniest little friend, talking with you always feels so easy and comforting—time literally flies when we’re together. Thank you for being my rock when things get tough. My one and only fortune teller 😄 Love ya ✨"
     },
-    Naran_friend: {
+    Erhes_friend: {
       title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+      text: "My best friend, the one who mirrors me so well. We’ve weathered countless storms together, and even when we feel tired or discouraged, we always rise back up together. That bond means everything to me. (Even if you do questionable things sometimes 😆) Love ya ❤️"
     },
-    Naran_friend: {
-      title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    Berkh: {
+      title: "My Betch ✨",
+      text: "My betch, you have such a beautiful heart, a killer personality, an amazing voice, and you even cook like a chef. We’ve been through it all, and I know we’ll continue to share so many more moments ahead. Love ya, betch 💕"
     },
-    Naran_friend: {
-      title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    Tselmeg: {
+      title: "Dearest Tselmeg ✨",
+      text: "My cutest brown friend—bold, fearless, and always diving in without overthinking. I love how adventurous you are. All those times we’ve spent wandering around, eating, and laughing are precious to me 🤎"
     },
-    Naran_friend: {
-      title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    Toodoi: {
+      title: "Dearest Toodoi ✨",
+      text: "My cute brown friend, someone who knows themselves well and carries such a calm, thoughtful heart. Somehow, everything you do turns into fun and joy. You’re truly amazing 💛"
     },
-    Naran_friend: {
-      title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    Manlai: {
+      title: "Dearest Manlai ✨",
+      text: "My best friend, even though we don’t meet often, every time we do it feels just as warm and natural as ever. You have such a pure heart and a genuinely lovely soul. I’m forever grateful for you. Love ya 💙"
     },
-    Naran_friend: {
-      title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    Chinguun: {
+      title: "My Gigga Chinguun ✨",
+      text: "My gigga, chad yae, Miko fan, besto freindo 😎 Even though it’s been a while, you’re still one of my closest friends. Your smile and kind heart light up everyone around you. Love ya 🔥"
     },
-    Naran_friend: {
-      title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    Nominjin: {
+      title: "Dearest Nominjin ✨",
+      text: "My lovely friend, being with you always feels so cozy and fun, no matter what we talk about. You’re intelligent, warm-hearted, and truly beautiful inside and out. I really cherish you. Love ya 🌷"
     },
-    Naran_friend: {
-      title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    Narka: {
+      title: "Dearest Narka ✨",
+      text: "My sweet friend, spending time with you and chatting about random things always feels so calming and natural. You’re someone who is always ready to help others with a kind heart. I truly admire that about you. Love ya 💞"
     },
-    Naran_friend: {
-      title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    Amirlan: {
+      title: "My Bro Amirlan ✨",
+      text: "My dear bro, always flooding me with reels and laughter. You’re a blast to talk to, and your energy instantly makes everything more exciting. I’m lucky to have you as a friend. Love ya, bro 🔥"
     },
-    Naran_friend: {
-      title: "Dear My Friendo ✨",
-      text: "Your wisdom and support changed my way of thinking. I am deeply grateful."
+    AltanOchir: {
+      title: "Dearest Altan-Ochir ✨",
+      text: "My lovely therapist friend, always listening, understanding, and knowing exactly the right thing to say. When I look back, you’ve always been there for me. I’m so grateful to have you in my life. Love ya 🤍"
     },
+    Ebo: {
+      title: "Dearest Ebo ✨",
+      text: "The most talented person I know—singing, guitar, piano, you name it. Your creativity and passion are truly inspiring. I hope your talent continues to shine and reach even more hearts. Love ya ✨"
+    },
+    Bek: {
+      title: "Dearest Bek ✨",
+      text: "My cute friend, a little mischievous and childlike on the outside, but with such a warm and gentle heart inside. Your simple and genuine nature is what makes you so special. Love ya 🤍"
+    },
+    Garid: {
+      title: "Dearest Garid ✨",
+      text: "My good friend, incredibly talented in morin khuur, dance, basketball, and so much more. You’re hardworking and full of potential. May your light keep shining brighter and brighter. Wishing you a wonderful new year 🌟"
+    }
   };
 
   const params = new URLSearchParams(window.location.search);
@@ -480,4 +492,5 @@
 </script>
 </body>
 </html>
+
 
