--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@
 
   if (recipient && messages[recipient]) {
     messageBox.innerHTML = `
-      <p style="font-weight:bold;">${messages[recipient].title}</p>
+      <p style="font-weight:bold; font-size:1.4rem; color:#d32f2f;">${messages[recipient].title}</p>
       <p>${messages[recipient].text}</p>
-      <h2 style="color:#d32f2f;">❤️ Merry Christmas ❤️</h2>
+      <h2 style="color:#d32f2f; margin-top:20px;">❤️ Happy New Year 2025 ❤️</h2>
     `;
   }
 
@@ -492,5 +492,6 @@
 </script>
 </body>
 </html>
+
 
 
