--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <button class="music-btn" onclick="toggleMusic()">🎵</button>
     
     <h1>With Gratitude</h1>
-    <p>This holiday season, I want to thank the people who made my year brighter.</p>
+    <p>I want to thank the people who made my year brighter.</p>
 
     <div class="cane cane-l">
       <svg viewBox="0 0 50 100">
@@ -492,6 +492,7 @@
 </script>
 </body>
 </html>
+
 
 
 
