Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@
     Garid: {
       title: "Dearest Garid ✨",
       text: "My good friend, incredibly talented in morin khuur, dance, basketball, and so much more. You’re hardworking and full of potential. May your light keep shining brighter and brighter. Wishing you a wonderful new year 🌟"
+    },
+    Oyunaa_sensei: {
+      title: "Dearest Teacher ✨",
+      text: "先生の温かいご支援とご親切に、心より感謝いたします。大切なときに私を信じ、励ましてくださったこと、本当にありがとうございました。先生のお言葉とご指導は、今も私の心の支えです。このご恩を胸に、これからも前向きに歩んでまいります"
     }
   };
 
@@ -492,6 +496,7 @@
 </script>
 </body>
 </html>
+
 
 
 
