--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     },
     Oyunaa_sensei: {
       title: "Dearest Teacher ✨",
-      text: "先生の温かいご支援とご親切に、心より感謝いたします。大切なときに私を信じ、励ましてくださったこと、本当にありがとうございました。先生のお言葉とご指導は、今も私の心の支えです。このご恩を胸に、これからも前向きに歩んでまいります"
+      text: "先生、いつも温かく見守ってくださって本当にありがとうございます。 私が迷っている時に、先生が信じて背中を押してくださったこと、一生忘れません。 先生の言葉は、今も私の魔法のお守りです。 これからも先生に教えていただいたことを胸に、私らしく頑張りますね！ 寒い日が続きますが、お体に気をつけてお過ごしください。❤️"
     }
   };
 
@@ -496,6 +496,7 @@
 </script>
 </body>
 </html>
+
 
 
 
