--- a/index.html
+++ b/index.html
@@ -315,23 +315,23 @@
       title: "Dear Teacher ❤️",
       text: "First of all. thank you for being my teacher. I'm truly grateful for the countless continuous support, patience, and genuine care. Your guidance has helped me grow not only academically, but also as a person. Thank you sensei, I will always cherish your kindness and dedication."
     },
-    Khuslen_friend: {
+    Khuslen: {
       title: "Dear My Friendo ✨",
       text: "My dear friend who always understands, supports, and encourages me. When things get heavy, you’re the one who reminds me that we can conquer anything together. Having you by my side gives me so much strength. I’ll always be grateful for you. Love ya 💖"
     },
-    Naran_friend: {
+    Naran: {
       title: "Dear My Friendo ✨",
       text: "My precious and genuine friend, thank you for always staying by my side when I feel down. Your kind heart and quiet support mean the world to me. I’m so thankful for all the beautiful memories we’ve made together. Love ya 💕"
     },
-    Lhamaa_friend: {
+    Lhamaa: {
       title: "Dear My Friendo ✨",
       text: "My cute little friend, I’m so grateful for all the fun, laughter, gossip, and even the crazy chaos we’ve shared. Thank you for always having my back and supporting me through the hard times. I truly appreciate you. Love ya ❤️"
     },
-    Chinbai_friend: {
+    Chinbai: {
       title: "Dear My Friendo ✨",
       text: "My cute and funniest little friend, talking with you always feels so easy and comforting—time literally flies when we’re together. Thank you for being my rock when things get tough. My one and only fortune teller 😄 Love ya ✨"
     },
-    Erhes_friend: {
+    Erhes: {
       title: "Dear My Friendo ✨",
       text: "My best friend, the one who mirrors me so well. We’ve weathered countless storms together, and even when we feel tired or discouraged, we always rise back up together. That bond means everything to me. (Even if you do questionable things sometimes 😆) Love ya ❤️"
     },
@@ -496,6 +496,7 @@
 </script>
 </body>
 </html>
+
 
 
 
