Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -383,6 +383,14 @@
       title: "Dearest Garid ✨",
       text: "My good friend, incredibly talented in morin khuur, dance, basketball, and so much more. You’re hardworking and full of potential. May your light keep shining brighter and brighter. Wishing you a wonderful new year 🌟"
     },
+    Aruika:{
+      title: "Dearest Aruika ✨",
+      text: "Thank you so much for all your help and support. Studying and preparing together was a special time for me. We worked hard, had fun, and made memories I’ll always treasure. I’m truly grateful for your encouragement and for sharing that journey with me 🤍"
+    },
+    Luvsa:{
+      title: "Dearest Luvsa ✨",
+      text: "My sugar daddy 😄 Thank you for always supporting and taking care of me, especially when it mattered most. The food, the care, and your life advice always meant a lot to me. I’m really grateful for your kindness and generosity 💫"
+    },
     Oyunaa_sensei: {
       title: "Dearest Teacher ✨",
       text: "先生、いつも温かく見守ってくださって本当にありがとうございます。 私が迷っている時に、先生が信じて背中を押してくださったこと、一生忘れません。 先生の言葉は、今も私の魔法のお守りです。 これからも先生に教えていただいたことを胸に、私らしく頑張りますね！ 寒い日が続きますが、お体に気をつけてお過ごしください。❤️"
@@ -496,6 +504,7 @@
 </script>
 </body>
 </html>
+
 
 
 
