--- a/index.html
+++ b/index.html
@@ -391,6 +391,18 @@
       title: "Dearest Luvsa ✨",
       text: "My sugar daddy 😄 Thank you for always supporting and taking care of me, especially when it mattered most. The food, the care, and your life advice always meant a lot to me. I’m really grateful for your kindness and generosity 💫"
     },
+    GanOd:{
+      title: "Dearest Gan-Od ✨",
+      text: "My best friend who never fails to make things fun. I love spending time and playing together with you. Your guitar skills are amazing, your style is always cool, and your energy makes every moment brighter. Thank you for always making me laugh and feel happy—I truly appreciate you.💫"
+    },
+    GanErdene:{
+      title: "Dearest Ganaa ✨",
+      text: "My best friend and a really smart, good-hearted person. You always think deeply and have your own unique way of seeing the world. Your humor is… very special 😅 sometimes a bit too wild, but I know it comes from a playful place. I appreciate you and hope you keep being the good person you are."
+    },
+    Baba:{
+      title: "Dearest Baba ✨",
+      text: "My best friend who is full of creativity and fun. Your photography skills, scientific thinking, and great taste in music always impress me. Playing and spending time together is never boring, and every moment turns into something memorable. I’m really grateful to have you as a friend.💫"
+    },
     Oyunaa_sensei: {
       title: "Dearest Teacher ✨",
       text: "先生、いつも温かく見守ってくださって本当にありがとうございます。 私が迷っている時に、先生が信じて背中を押してくださったこと、一生忘れません。 先生の言葉は、今も私の魔法のお守りです。 これからも先生に教えていただいたことを胸に、私らしく頑張りますね！ 寒い日が続きますが、お体に気をつけてお過ごしください。❤️"
@@ -504,6 +516,7 @@
 </script>
 </body>
 </html>
+
 
 
 
